# lib/db/src/schema/index.ts
@@ -7,3 +7,4 @@ export * from "./wrong_answers";
 export * from "./exam_sessions";
 export * from "./exam_results";
 export * from "./user_answers";
+export * from "./notifications";
